# Davenstein

./: .gitignore  COPYRIGHT.md  Cargo.toml  Cross.toml  LICENSE-MIT  LICENSE.md  README.md  THIRD_PARTY_ASSETS.md  build.rs  build_create_assets.ps1  build_create_assets.sh
.github/workflows/: release.yml
assets/maps/: e1m10_plane1_u16.txt  e1m1_plane0_u16.txt  e1m1_plane1_u16.txt  e1m1_preview_plane0.txt  e1m3_plane1_u16.txt  e1m5_plane0_u16.txt  e1m7_plane0_u16.txt  e1m9_plane0_u16.txt  e1m9_plane1_u16.txt
assets/maps/episode1/: e1m10_plane0_u16.txt  e1m2_plane0_u16.txt  e1m2_plane1_u16.txt  e1m3_plane0_u16.txt  e1m4_plane0_u16.txt  e1m4_plane1_u16.txt  e1m5_plane1_u16.txt  e1m6_plane0_u16.txt  e1m6_plane1_u16.txt  e1m7_plane1_u16.txt  e1m8_plane0_u16.txt  e1m8_plane1_u16.txt
assets/maps/episode2/: e2m10_plane0_u16.txt  e2m10_plane1_u16.txt  e2m1_plane0_u16.txt  e2m1_plane1_u16.txt  e2m2_plane0_u16.txt  e2m2_plane1_u16.txt  e2m3_plane0_u16.txt  e2m3_plane1_u16.txt  e2m4_plane0_u16.txt  e2m4_plane1_u16.txt  e2m5_plane0_u16.txt  e2m5_plane1_u16.txt  e2m6_plane0_u16.txt  e2m6_plane1_u16.txt  e2m7_plane0_u16.txt  e2m7_plane1_u16.txt  e2m8_plane0_u16.txt  e2m8_plane1_u16.txt  e2m9_plane0_u16.txt  e2m9_plane1_u16.txt
assets/maps/episode3/: e3m10_plane0_u16.txt  e3m10_plane1_u16.txt  e3m1_plane0_u16.txt  e3m1_plane1_u16.txt  e3m2_plane0_u16.txt  e3m2_plane1_u16.txt  e3m3_plane0_u16.txt  e3m3_plane1_u16.txt  e3m4_plane0_u16.txt  e3m4_plane1_u16.txt  e3m5_plane0_u16.txt  e3m5_plane1_u16.txt  e3m6_plane0_u16.txt  e3m6_plane1_u16.txt  e3m7_plane0_u16.txt  e3m7_plane1_u16.txt  e3m8_plane0_u16.txt  e3m8_plane1_u16.txt  e3m9_plane0_u16.txt  e3m9_plane1_u16.txt
assets/maps/episode4/: e4m10_plane0_u16.txt  e4m10_plane1_u16.txt  e4m1_plane0_u16.txt  e4m1_plane1_u16.txt  e4m2_plane0_u16.txt  e4m2_plane1_u16.txt  e4m3_plane0_u16.txt  e4m3_plane1_u16.txt  e4m4_plane0_u16.txt  e4m4_plane1_u16.txt  e4m5_plane0_u16.txt  e4m5_plane1_u16.txt  (+8 more)
packaging/debian/: build-package.sh
packaging/flatpak/: build-package.sh  cargo-sources.json  flatpak-cargo-generator.py  io.github.ophois47.davenstein.desktop  io.github.ophois47.davenstein.metainfo.xml  io.github.ophois47.davenstein.yml
packaging/freebsd/: build-package.sh  build-portable.sh  davenstein.desktop  pkg-plist
packaging/linux/: build-appimage.sh  build-portable.sh  linuxdeploy-aarch64.sha256  linuxdeploy-x86_64.sha256
packaging/macos/: Info.plist  build-app.sh
packaging/rpm/: build-package.sh
packaging/windows/: build-portable.sh  installer.nsi
scripts/: build_create_assets.ps1  build_create_assets.sh  setup-ubuntu.sh
src/: actors.rs  ai.rs  ai_patrol.rs  app_paths.rs  audio.rs  decorations.rs  enemies.rs  episode_end.rs  episode_end_markers.rs  high_score.rs  level.rs  level_complete.rs  level_score.rs  lib.rs  main.rs  map.rs  options.rs  pak_assets.rs  pak_builder.rs  perf_overlay.rs  pickups.rs  player.rs  pushwalls.rs  restart.rs  skill.rs  world.rs
src/combat/: hitscan.rs  mod.rs  projectiles.rs
src/input/: cursor.rs  gather.rs  intent.rs  menu.rs  mod.rs
src/save/: capture.rs  mod.rs  model.rs  storage.rs
src/settings/: mod.rs  model.rs  store.rs
src/ui/: hud.rs  level_end_font.rs  mod.rs  splash.rs  state.rs  sync.rs
(+44 files in other folders)
