[package]
name = "Davenstein"
version = "1.0.0"
edition = "2024"

[lib]
name = "davelib"
path = "src/lib.rs"

[[bin]]
name = "Davenstein"
path = "src/main.rs"
doc = false

[[bin]]
name = "pak_builder"
path = "src/pak_builder.rs"

[dependencies]
bevy = { version = "0.19", features = ["wav", "debug"] }
dirs = "6"
futures-lite = "2"
memmap2 = "0.9"
rand = "0.10"
ron = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Bevy's GilRs gamepad backend uses inotify for device monitoring on FreeBSD.
# Version 0.11.4 contains the required FreeBSD support. Default features remain
# disabled so this version constraint does not add unused asynchronous support.
[target.'cfg(target_os = "freebsd")'.dependencies]
inotify = { version = "=0.11.4", default-features = false }

[build-dependencies]
winresource = "0.1.31"
